# rust-graphql-auth

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 1_setup.sql  2_users.sql
migrations/2021-12-12-115401_users/: up.sql
src/: database.rs  db.rs  errors.rs  graphql.rs  handlers.rs  lib.rs  main.rs  model.rs  models.rs  service.rs
src/auth/: basic.rs  errors.rs  handlers.rs  mod.rs  model.rs  service.rs  utils.rs
src/database/: mod.rs  schema.rs
src/database/models/: user.rs
src/service/: find_user.rs  mod.rs  register.rs  sign_in.rs
src/utils/: jwt.rs
