[package]
name = "rust-graphql-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
rand = "0.8"
rust-argon2 = "0.8"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
