[package]
name = "rust-graphql-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
rand = "0.8.5"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
