[package]
name = "rust-graphql-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
